# azdo-process-export

./: .mcp.json  CLAUDE.md  README.md  __main__.py  project.json  pyproject.toml
.github/chatmodes/: 4.1-beast.chatmode.md
.github/instructions/: dev_workflow.instructions.md  documentation.instructions.md  self_improve.instructions.md  testing-practices.instructions.md  uv_usage.instructions.md
.taskmaster/: config.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  tasks.json
azdo_process_export/cli/: main.py
azdo_process_export/domain/: metadata.py  models.py
azdo_process_export/infrastructure/: auth.py  http_client.py  logging.py
docs/: architecture.md  bdd-alignment-guide.md  prd.md
features/: authentication.feature  cli_basic.feature  environment.py  http_client.feature  logging.feature  project_metadata.feature
features/steps/: cli_steps.py  http_client_steps.py  project_metadata_steps.py
scripts/: sync-mcp.sh
temp-cookiecutter/example-project/: README.md  mkdocs.yml  pyproject.toml
temp-cookiecutter/example-project/docs/: index.md
tests/: environment.py  test_logging.py
tests/features/: cli_basic.feature
tests/steps/: cli_steps.py
