[project]
name = "azdo-process-export"
version = "0.1.0"
description = "Azure DevOps process export tool - captures complete project configuration and activity trends in portable JSON format"
authors = [{ name = "tiberriver256", email = "tiberriver256@users.noreply.github.com" }]
readme = "README.md"
keywords = ['azure-devops', 'process-export', 'analytics', 'cli']
requires-python = ">=3.11,<4.0"
dependencies = [
    "azure-devops>=7.0.0",
    "azure-identity>=1.16.0",
    "msgraph-core>=1.0.0",
    "click>=8.1.0",
    "orjson>=3.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
azdo-process-export = "azdo_process_export.cli.main:cli"

[project.urls]
Homepage = "https://github.com/Tiberriver256/azdo-process-export"
Repository = "https://github.com/Tiberriver256/azdo-process-export"
Documentation = "https://github.com/Tiberriver256/azdo-process-export"
Issues = "https://github.com/Tiberriver256/azdo-process-export/issues"

[dependency-groups]
dev = [
    "behave>=1.2.6",
    "pytest>=7.2.0",
    "pytest-asyncio>=0.21.0",
    "pre-commit>=2.20.0",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["azdo_process_export"]

[tool.mypy]
files = ["azdo_process_export"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["azdo_process_export"]

[tool.uv]
default-groups = ["dev"]
